test/files/neg/t12879/A.java
public enum A {
  @Deprecated
  Foo,
  Bar
}
